--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,2 +1,4 @@
+mongodb.db = "testdb"
+mongodb.evolution.mongoCmd = "mongo " ${mongodb.db}
 mongodb.evolution.useLocks = true
 mongodb.evolution.lockDBName = "lock-for-mongodb-evolutions"
