--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -2,3 +2,4 @@ mongodb.db = "testdb"
 mongodb.evolution.mongoCmd = "mongo " ${mongodb.db}
 mongodb.evolution.useLocks = true
 mongodb.evolution.lockDBName = "lock-for-mongodb-evolutions"
+mongodb.evolution.evolutionsPath = "src/test/resources/evolutions/"
