--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,5 +1,5 @@
 mongodb.db = "testdb"
 mongodb.evolution.mongoCmd = "mongo " ${mongodb.db}
 mongodb.evolution.useLocks = true
-mongodb.evolution.lockDBName = "lock-for-mongodb-evolutions"
+mongodb.evolution.lockColName = "lock-for-mongodb-evolutions"
 mongodb.evolution.evolutionsPath = "src/test/resources/evolutions/"
