Remove unnecessary cleanup of the result
Change-Id: Id6735a3fc5efc87df8d2e23b05be6ed4d504df8f

--- a/src/main/resources/lock/releaseLock.js.template
+++ b/src/main/resources/lock/releaseLock.js.template
@@ -1,9 +1,1 @@
-db.runCommand({
-  'findAndModify': '%s',
-  'update': {
-    '$set': {
-      'locked': false
-    }
-  },
-  'new': true
-}).value;
+db['%s'].drop();
