Change 'findAndModify' to support MongoDB v. < 2.6
Change-Id: If952d147361b8f4b2299bff1931927fe1cbfc452

--- a/src/main/resources/lock/acquireLock.js.template
+++ b/src/main/resources/lock/acquireLock.js.template
@@ -1,11 +1,11 @@
 (function () {
   var dbName = '%s';
+  var query = { '_id': 1 };
 
-  db.runCommand({
-    'findAndModify': dbName,
+  db[dbName].findAndModify({
+    'query': query,
     'update': {
       '$set': {
-        '_id': 1,
         'locked': true
       }
     },
@@ -13,5 +13,5 @@
     'new': true
   });
 
-  return db[dbName].findOne();
+  return db[dbName].findOne(query);
 })();
