Update MongoDB url in test
Change-Id: I0733ec8ce964301ae818dbb16bd7633dcd319a38

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,4 +1,4 @@
-mongodb.evolution.mongoCmd = "mongo"
+mongodb.evolution.mongoCmd = "mongo backend-util-mongodb-1.evojamnet"
 mongodb.evolution.useLocks = true
 mongodb.evolution.lockColName = "lockForMongodbEvolutions"
 mongodb.evolution.evolutionsPath = "src/test/resources/evolutions/"
