Allow to set arbitrary MongoDB uri in test
Change-Id: Iec8c9a2ecdfead64bc701b51e44e4901208c28e9

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,4 +1,6 @@
-mongodb.evolution.mongoCmd = "mongo backend-util-mongodb-1.evojamnet"
+mongodb.uri = "localhost"
+mongodb.uri = ${?MONGODB_URI}
+mongodb.evolution.mongoCmd = "mongo "${mongodb.uri}
 mongodb.evolution.useLocks = true
 mongodb.evolution.lockColName = "lockForMongodbEvolutions"
 mongodb.evolution.evolutionsPath = "src/test/resources/evolutions/"
