Create test util EmbeddedMongoDb
Change-Id: I01a96a6912d88c17fc3e70592dbf5bb6ceb53afb

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,6 +1,11 @@
+mongodb.port = 27037
+mongodb.port = ${?MONGODB_PORT}
 mongodb.uri = "localhost"
 mongodb.uri = ${?MONGODB_URI}
-mongodb.evolution.mongoCmd = "mongo "${mongodb.uri}
+mongodb.evolution.mongoCmd = "mongo "${mongodb.uri}":"${mongodb.port}
 mongodb.evolution.useLocks = true
 mongodb.evolution.lockColName = "lockForMongodbEvolutions"
 mongodb.evolution.evolutionsPath = "src/test/resources/evolutions/"
+
+mongodb.embedded.host = ${mongodb.uri}
+mongodb.embedded.port = ${mongodb.port}
